# 5A-OpenCV-Benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.bat
Annotator/: CMakeLists.txt
Annotator/src/: DataSerializer.cpp  DataSerializer.h  TableMatches.cpp  TableMatches.h  main.cpp
Benchmarking/: CMakeLists.txt
Benchmarking/src/: DataSerializer.cpp  TableMatches.cpp  main.cpp
include/: ASolutionStrategy.hpp  BenchmarkData.h  CardData.h  CompareData.h  ExecutionData.h  FalsePositiveCardData.h  ISolutionStrategy.h  SolutionData.h  SolutionExecutionData.h
include/strategy/: ALiorSolutionStrategy.h  AQuentinSolutionStrategy.h  BaseLiorSolutionStrategy.h  BaseQuentinSolutionStrategy.h
src/: FalsePositiveCardData.cpp  main.cpp
src/strategy/: ALiorSolutionStrategy.cpp  AQuentinSolutionStrategy.cpp  BaseLiorSolutionStrategy.cpp  BaseQuentinSolutionStrategy.cpp
